SDKs/rumble.run/2.15.0/python/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
pip install git+https://github.com/speakeasy-api/openapi-directory.git#subdirectory=SDKs/rumble.run/2.15.0/python
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```python
import sdk
from sdk.models import operations, shared

s = sdk.SDK()


req = shared.CredentialOptions(
    acl={
        "provident": "distinctio",
        "quibusdam": "unde",
        "nulla": "corrupti",
    },
    cidrs="10.0.0.17/32, 192.168.1.0/24",
    global_=False,
    name="credentials_name",
    secret=shared.SNMPv3CredentialFields(
        auth_passphrase="authpass",
        auth_protocol="sha",
        context="vlan-32",
        privacy_passphrase="privpass",
        privacy_protocol="aes",
        username="user",
    ),
    type="miradore_api_key_v1",
)
    
res = s.account.create_account_credential(req, operations.CreateAccountCredentialSecurity(
    bearer_auth="Bearer YOUR_BEARER_TOKEN_HERE",
))

if res.credential is not None:
    # handle response
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## Available Resources and Operations


### account

* `create_account_credential` - Create a new credential
* `create_account_group` - Create a new group
* `create_account_group_mapping` - Create a new SSO group mapping
* `create_account_key` - Create a new key
* `create_account_organization` - Create a new organization
* `create_account_scan_template` - Create a new scan template
* `create_account_user` - Create a new user account
* `create_account_user_invite` - Create a new user account and send an email invite
* `delete_account_organization_export_token` - Removes the export token from the specified organization
* `export_events_json` - System event log as JSON
* `export_events_jsonl` - System event log as JSON line-delimited
* `get_account_agents` - Get all agents across all organizations
* `get_account_credential` - Get credential details
* `get_account_credentials` - Get all account credentials
* `get_account_group` - Get group details
* `get_account_group_mapping` - Get SSO group mapping details
* `get_account_group_mappings` - Get all SSO group mappings
* `get_account_groups` - Get all groups
* `get_account_key` - Get key details
* `get_account_keys` - Get all active API keys
* `get_account_license` - Get license details
* `get_account_organization` - Get organization details
* `get_account_organizations` - Get all organization details
* `get_account_scan_template` - Get scan template details
* `get_account_scan_templates` - Get all scan templates across all organizations (up to 1000)
* `get_account_sites` - Get all sites details across all organizations
* `get_account_tasks` - Get all task details across all organizations (up to 1000)
* `get_account_user` - Get user details
* `get_account_users` - Get all users
* `remove_account_credential` - Remove this credential
* `remove_account_group` - Remove this group
* `remove_account_group_mapping` - Remove this SSO group mapping
* `remove_account_key` - Remove this key
* `remove_account_organization` - Remove this organization
* `remove_account_scan_template` - Remove scan template
* `remove_account_user` - Remove this user
* `reset_account_user_lockout` - Resets the user's lockout status
* `reset_account_user_mfa` - Resets the user's MFA tokens
* `reset_account_user_password` - Sends the user a password reset email
* `rotate_account_key` - Rotates the key secret
* `rotate_account_organization_export_token` - Rotates the organization export token and returns the updated organization
* `update_account_group` - Update an existing group
* `update_account_group_mapping` - Update an existing SSO group mapping
* `update_account_organization` - Update organization details
* `update_account_scan_template` - Update scan template
* `update_account_user` - Update a user's details

### cisco_sntc

* `export_assets_cisco_csv` - Cisco serial number and model name export for Cisco Smart Net Total Care Service.

### export

* `export_asset_top_hwcsv` - Top asset hardware products as CSV
* `export_asset_top_oscsv` - Top asset operating systems as CSV
* `export_asset_top_tags_csv` - Top asset tags as CSV
* `export_asset_top_types_csv` - Top asset types as CSV
* `export_assets_csv` - Asset inventory as CSV
* `export_assets_json` - Exports the asset inventory
* `export_assets_jsonl` - Asset inventory as JSON line-delimited
* `export_assets_nmap_xml` - Asset inventory as Nmap-style XML
* `export_services_csv` - Service inventory as CSV
* `export_services_json` - Service inventory as JSON
* `export_services_jsonl` - Service inventory as JSON line-delimited
* `export_services_top_products_csv` - Top service products as CSV
* `export_services_top_protocols_csv` - Top service protocols as CSV
* `export_services_top_tcpcsv` - Top TCP services as CSV
* `export_services_top_udpcsv` - Top UDP services as CSV
* `export_sites_csv` - Site list as CSV
* `export_sites_json` - Export all sites
* `export_sites_jsonl` - Site list as JSON line-delimited
* `export_subnet_utilization_stats_csv` - Subnet utilization statistics as as CSV
* `export_wireless_csv` - Wireless inventory as CSV
* `export_wireless_json` - Wireless inventory as JSON
* `export_wireless_jsonl` - Wireless inventory as JSON line-delimited

### organization

* `clear_bulk_asset_tags` - Clear all tags across multiple assets based on a search query
* `create_scan` - Create a scan task for a given site
* `create_site` - Create a new site
* `get_agent` - Get details for a single agent
* `get_agents` - Get all agents
* `get_asset` - Get asset details
* `get_assets` - Get all assets
* `get_key` - Get API key details
* `get_organization` - Get organization details
* `get_service` - Get service details
* `get_services` - Get all services
* `get_site` - Get site details
* `get_sites` - Get all sites
* `get_task` - Get task details
* `get_task_change_report` - Returns a temporary task change report data url
* `get_task_log` - Returns a temporary task log data url
* `get_task_scan_data` - Returns a temporary task scan data url
* `get_tasks` - Get all tasks (last 1000)
* `get_wireless_lan` - Get wireless LAN details
* `get_wireless_la_ns` - Get all wireless LANs
* `hide_task` - Signal that a completed task should be hidden
* `import_nessus_scan_data` - Import a Nessus scan data file into a site
* `import_scan_data` - Import a scan data file into a site
* `remove_agent` - Remove and uninstall an agent
* `remove_asset` - Remove an asset
* `remove_key` - Remove the current API key
* `remove_service` - Remove a service
* `remove_site` - Remove a site and associated assets
* `remove_wireless_lan` - Remove a wireless LAN
* `rotate_key` - Rotate the API key secret and return the updated key
* `stop_task` - Signal that a task should be stopped or canceledThis will also remove recurring and scheduled tasks
* `update_agent_site` - Update the site associated with agent
* `update_asset_comments` - Update asset comments
* `update_asset_tags` - Update asset tags
* `update_bulk_asset_tags` - Update tags across multiple assets based on a search query
* `update_organization` - Update organization details
* `update_site` - Update a site definition
* `update_task` - Update task parameters
* `upgrade_agent` - Force an agent to update and restart

### public

* `get_latest_agent_version` - Returns latest agent version
* `get_latest_platform_version` - Returns latest platform version
* `get_latest_scanner_version` - Returns latest scanner version

### service_now

* `snow_export_assets_csv` - Export an asset inventory as CSV for ServiceNow integration
* `snow_export_assets_json` - Exports the asset inventory as JSON
* `snow_export_services_csv` - Export a service inventory as CSV for ServiceNow integration

### splunk

* `splunk_asset_sync_created_json` - Exports the asset inventory in a sync-friendly manner using created_at as a checkpoint. Requires the Splunk entitlement.
* `splunk_asset_sync_updated_json` - Exports the asset inventory in a sync-friendly manner using updated_at as a checkpoint. Requires the Splunk entitlement.
<!-- End SDK Available Operations -->

### Maturity

This SDK is in beta, and there may be breaking changes between versions without a major version update. Therefore, we recommend pinning usage
to a specific package version. This way, you can install the same version each time without breaking changes unless you are intentionally
looking for the latest version.

### Contributions

While we value open-source contributions to this SDK, this library is generated programmatically.
Feel free to open a PR or a Github issue as a proof of concept and we'll do our best to include it in a future release !

### SDK Created by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
